Enable Java options for Docker, so that it can respect cgroups limits.